--- a/codeception.yml
+++ b/codeception.yml
@@ -12,26 +12,9 @@ modules:
     config:
         Yii2:
             configFile: 'config/test.php'
-            cleanup: false
-
-# To enable code coverage:
-#coverage:
-#    #c3_url: http://localhost:8080/index-test.php/
-#    enabled: true
-#    #remote: true
-#    #remote_config: '../codeception.yml'
-#    whitelist:
-#        include:
-#            - models/*
-#            - controllers/*
-#            - commands/*
-#            - mail/*
-#    blacklist:
-#        include:
-#            - assets/*
-#            - config/*
-#            - runtime/*
-#            - vendor/*
-#            - views/*
-#            - web/*
-#            - tests/*
+            transaction: false # don't wrap test in transaction
+            leanup: false
+        Db:
+            dsn: 'pgsql:host=localhost;dbname=example_test'
+            user: 'postgres'
+            password: 'postgres'
