--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   php:
     image: yiisoftware/yii2-php:7.1-apache
     volumes:
-      - ~/.composer-docker/cache:/root/.composer/cache:delegated
-      - ./:/app:delegated
+      - ~/.composer-docker/cache:/root/.composer/cache
+      - ./:/app
     ports:
       - '8000:80'
