--- a/tests/functional.suite.yml
+++ b/tests/functional.suite.yml
@@ -11,3 +11,9 @@ modules:
     enabled:
       - Filesystem
       - Yii2
+      - Db
+      - PhpBrowser:
+          url: 'http://localhost:8080/index-test.php'
+      - REST:
+          depends: PhpBrowser
+          url: 'http://localhost:8080/index-test.php'
